# learning_voice_agent

./: .coveragerc  .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.optimized  GET_STARTED.md  PHASE3_DELIVERABLES.md  PHASE4_COMPLETE.md  PHASE4_IMPLEMENTATION_COMPLETE.txt  PROJECT_STATUS.md  README.md  README_CONVERSATION_AGENT.md  README_PHASE4.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  package.json  playwright.config.ts  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  deploy-production.yml  deploy-staging.yml  deploy.yml  lint.yml  (+3 more)
app/: advanced_prompts.py  audio_pipeline.py  config.py  conversation_handler.py  database.py  logger.py  main.py  metrics.py  middleware.py  models.py  redis_client.py  resilience.py  state_manager.py  twilio_handler.py  vector_store.py
daily_reports/: 2025-09-14.md  2025-09-15.md
docs/: AGENT_API_REFERENCE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_V1.md  CICD_SETUP_GUIDE.md  CI_CD.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_MONITORING.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_PLAN.md  MONITORING.md  OBSERVABILITY_EXAMPLES.md  OBSERVABILITY_SUMMARY.md  PHASE1_AUDIT_REPORT.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_AGENT_ARCHITECTURE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_DELIVERY_SUMMARY.md  PHASE2_IMPLEMENTATION_GUIDE.md  PHASE2_RESEARCH_AGENT_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE2_TESTING_GUIDE.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE3_KNOWLEDGE_GRAPH.md  PHASE3_QUICKSTART.md  PHASE3_SUMMARY.md  PHASE3_TESTING_GUIDE.md  PHASE3_USAGE_EXAMPLES.md  PHASE3_VECTOR_API_REFERENCE.md  PHASE3_VECTOR_ARCHITECTURE.md  PHASE4_API_REFERENCE.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_DELIVERABLES.md  PHASE4_DELIVERY_REPORT.md  PHASE4_IMPLEMENTATION_GUIDE.md  PHASE4_MULTIMODAL.md  PHASE4_MULTIMODAL_ARCHITECTURE.md  (+37 more)
examples/: conversation_agent_demo.py  conversation_agent_quick_start.py  document_processing_demo.py  hybrid_search_demo.py  phase3_rag_integration.py
frontend/: env.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
migrations/: env.py
monitoring/: grafana_dashboard.json
scripts/: backup.sh  benchmark_agents.py  deploy.sh  download_nlp_models.py  healthcheck.sh  migrate.sh  phase4_storage_migration.sql  restore.sh  run_load_tests.sh  run_phase4_migration.py  security_audit_verification.py  security_scan.py  session_cleanup.py  system_audit.py  test_metrics_endpoints.py  validate_ruvector_integration.py  verify_deployment.sh  verify_phase3.sh  verify_phase4.py
static/: index.html  manifest.json  sw.js
tests/: __init__.py  conftest.py  test_analytics_goals.py  test_audio_pipeline.py  test_config.py  test_conversation.py  test_conversation_agent.py  test_conversation_handler.py  test_database.py  test_framework_verification.py  test_health_endpoints.py  test_import_verification.py  test_imports.py  test_knowledge_graph.py  test_main_integration.py  test_metrics.py  test_models.py  test_monitoring.py  test_multimodal_endpoints.py  test_rag_integration.py  test_redis_client.py  test_resilience.py  test_session_cleanup.py  test_state_manager.py  test_twilio_handler.py  test_vector_integration.py  test_week3_features.py
(+431 files in other folders)
